[package]
name = "taptreeofhorror"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.90"
bitcoin = { version = "0.32.3", features = ["rand-std"] }
# secp256k1 = { version = "0.28.0", features = ["rand-std"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
miniscript = "12.2.0"
reqwest = { version = "0.12", features = ["json"] }
bitcoin_hashes = "0.14.0"
